--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "axios": "^0.21.3",
+        "laravel-mix": "^6.0.29",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^29.2.0"
     }
 }
